crates/talkbank-parser-tests/tests/parser_suite/snapshots/parser_suite__snapshot_tests__parser_utterance_snapshot.snap
---
source: crates/talkbank-parser-tests/tests/parser_suite/snapshot_tests.rs
assertion_line: 140
expression: "rows.join(\"\\n\\n\")"
---
[tree-sitter] utterance
{
  "main": {
    "speaker": "CHI",
    "content": {
      "content": [
        {
          "type": "word",
          "raw_text": "I",
          "cleaned_text": "I",
          "content": [
            {
              "type": "text",
              "content": "I"
            }
          ]
        },
        {
          "type": "word",
          "raw_text": "want",
          "cleaned_text": "want",
          "content": [
            {
              "type": "text",
              "content": "want"
            }
          ]
        }
      ],
      "terminator": {
        "type": "period"
      }
    }
  },
  "dependent_tiers": [
    {
      "type": "Mor",
      "data": {
        "tier_type": "Mor",
        "items": [
          {
            "main": {
              "pos": "pro",
              "lemma": "I"
            }
          },
          {
            "main": {
              "pos": "v",
              "lemma": "want"
            }
          },
          {
            "main": {
              "pos": "n",
              "lemma": "cookie",
              "features": [
                "PL"
              ]
            }
          }
        ],
        "terminator": null
      }
    }
  ]
}
